Bilineal connection workouts